--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@ngrx/effects": "^20.0.1",
+    "@ngrx/store": "^20.0.1",
+    "@ngrx/store-devtools": "^20.0.1",
     "@taiga-ui/cdk": "^4.54.0",
     "@taiga-ui/core": "^4.54.0",
     "@taiga-ui/event-plugins": "^4.0.2",
