--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "start:api": "json-server --watch db.json --port 3000"
   },
   "prettier": {
     "overrides": [
@@ -50,6 +51,7 @@
     "angular-eslint": "20.3.0",
     "eslint": "^9.36.0",
     "jasmine-core": "~5.8.0",
+    "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
