--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,11 @@
               },
               {
                 "glob": "**/*",
+                "input": "src/app/assets",
+                "output": "assets"
+              },
+              {
+                "glob": "**/*",
                 "input": "node_modules/@taiga-ui/icons/src",
                 "output": "assets/taiga-ui/icons"
               }
@@ -38,7 +43,8 @@
               "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
               "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
               "src/styles.scss"
-            ]
+            ],
+            "outputPath": "dist/to-do-list"
           },
           "configurations": {
             "production": {
